--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "pixi.js": "^4.4.4"
+  },
+  "devDependencies": {
+    "typescript": "^2.2.2",
+    "@types/pixi.js": "^4.4.2"
   }
 }
