--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "webpack",
+    "watch": "webpack --progress --colors --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "August Herrström",
@@ -15,7 +17,12 @@
     "pixi.js": "^4.4.4"
   },
   "devDependencies": {
+    "@types/pixi.js": "^4.4.2",
+    "brfs": "^1.4.3",
+    "source-map-loader": "^0.2.1",
+    "transform-loader": "^0.2.4",
+    "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
-    "@types/pixi.js": "^4.4.2"
+    "webpack": "^2.4.1"
   }
 }
